--- a/src/pages/auth/sign-up.astro
+++ b/src/pages/auth/sign-up.astro
@@ -6,7 +6,7 @@ export const prerender = false;
 
 const { user } = Astro.locals;
 
-if (user) {
+if (user && !user.isAnonymous) {
   return Astro.redirect("/");
 }
 ---
